# format-2

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  format.hpp
tests/: CMakeLists.txt  format_tests.cpp
